Style: Fix image/svg alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,17 +23,10 @@ article table, article pre {
   overflow-x: scroll;
 }
 
-/* This handy trick has been brought to you by
- * https://www.w3schools.com/howto/howto_css_image_center.asp
- */
-.graphviz {
+article img, article svg {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-}
-
-article img {
   max-width: 100%;
 }
 
